<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">Robattery</string>

	<string name="title_main">Robattery</string>
	<string name="menu_main_settings">Settings</string>

	<string name="title_settings">Robattery Settings</string>
	<string name="settings_notifications">Notifications</string>
	<string name="settings_notifications_level">Minimum Battery Level</string>
	<string name="settings_notifications_interval">Interval</string>
	<string name="settings_notifications_ringtone">Ringtone</string>
	<string name="settings_notifications_vibrate">Vibrate</string>

	<string name="default_ringtone">Default ringtone</string>
	<string name="silent">Silent</string>
<string name="loading">Loading...</string>
</resources>
