<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	android:enabled="true">
	<PreferenceCategory android:title="@string/settings_notifications"
		android:enabled="true">
		<ListPreference android:key="notification_level"
			android:title="@string/settings_notifications_level" android:enabled="true"
			android:entries="@array/notification_levels" android:defaultValue="15"
			android:entryValues="@array/notification_level_values"></ListPreference>
		<ListPreference android:entryValues="@array/notification_interval_values"
			android:entries="@array/notification_intervals" android:title="@string/settings_notifications_interval"
			android:enabled="true" android:defaultValue="120000" android:key="notification_interval"></ListPreference>
		<RingtonePreference android:key="notification_ringtone"
			android:showSilent="true" android:ringtoneType="notification"
			android:showDefault="true" android:title="@string/settings_notifications_ringtone"
			android:enabled="true" />
		<CheckBoxPreference android:enabled="true"
			android:title="@string/settings_notifications_vibrate" android:key="notification_vibrate"
			android:defaultValue="true" />

	</PreferenceCategory>
</PreferenceScreen>
